--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Almarai&family=Roboto+Condensed:wght@700&display=swap');
+
 *,
 *::after,
 *::before {
@@ -8,18 +9,24 @@
   box-sizing: border-box;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+.web-en-form input[type=number]::-webkit-inner-spin-button,
+.web-en-form input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   appearance: none;
 }
 
-form {
+.web-questionnaire-ar input[type=number]::-webkit-inner-spin-button,
+.web-questionnaire-ar input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+form.web {
   background: url("../images/bg.png");
   background-size: cover;
 }
 
-form .container {
+form.web .container {
   width: min(600px, 80%);
   margin: auto;
   display: flex;
@@ -27,11 +34,11 @@ form .container {
   justify-content: center;
   align-items: center;
 }
-form .container img {
+form.web .container img {
   width: 150px;
   margin-top: 2rem;
 }
-form .container .form-title {
+form.web .container .form-title {
   width: 100%;
   padding: 2.5rem;
   margin: 2rem 0;
@@ -40,18 +47,18 @@ form .container .form-title {
   border: 1px solid #dadce0;
   box-shadow: 0px 0px 8px 1px #dadce0;
 }
-form .container .form-title h2 {
+form.web .container .form-title h2 {
   font-family: Cabin;
   margin-bottom: 0.8rem;
   color: #fcb813;
 }
-form .container .form-title p {
+form.web .container .form-title p {
   font-family: Roboto, Arial, sans-serif;
   font-size: 15px;
   color: #8a817c;
   line-height: 25px;
 }
-form .container div:not(:first-of-type) {
+form.web .container div:not(:first-of-type) {
   padding: 1rem;
   background-color: white;
   border: 1px solid #dadce0;
@@ -61,12 +68,12 @@ form .container div:not(:first-of-type) {
   padding: 1rem 2rem;
   margin-bottom: 1rem;
 }
-form .container div:not(:first-of-type) label {
+form.web .container div:not(:first-of-type) label {
   font-size: 14px;
   font-family: Roboto, Arial, sans-serif;
   color: #8a817c;
 }
-form .container div:not(:first-of-type) input {
+form.web .container div:not(:first-of-type) input {
   margin-top: 0.5rem;
   width: 60%;
   border: 0;
@@ -78,46 +85,46 @@ form .container div:not(:first-of-type) input {
   background: transparent;
   transition: border-color 0.2s;
 }
-form .container div:not(:first-of-type) input:focus {
+form.web .container div:not(:first-of-type) input:focus {
   border-bottom: 2px solid #007ee1;
 }
 @media (max-width: 800px) {
-  form .container div:not(:first-of-type) input input {
+  form.web .container div:not(:first-of-type) input input {
     width: 100% !important;
   }
 }
-form .container .your-business input, form .container .your-offer input {
+form.web .container .your-business input, form .container .your-offer input {
   width: 100% !important;
 }
-form .container .your-opinion input, form .container .additional-information input {
+form.web .container .your-opinion input, form .container .additional-information input {
   width: 100% !important;
 }
-form .container .choose-radio input, form .container .choose-check-box input {
+form.web .container .choose-radio input, form .container .choose-check-box input {
   width: auto !important;
 }
-form .container .choose-check-box label:last-of-type {
+form.web .container .choose-check-box label:last-of-type {
   margin-right: 1rem;
 }
-form .container .choose-check-box input:last-of-type {
+form.web .container .choose-check-box input:last-of-type {
   width: 80% !important;
 }
-form .container .thank-you h4 {
+form.web .container .thank-you h4 {
   font-family: Cabin;
   color: #8a817c;
   text-align: center;
   line-height: 25px;
 }
-form .container main {
+form.web .container main {
   width: 100%;
   display: flex;
   justify-content: center;
   margin: 1rem 0 5rem 0;
 }
-form .container main a {
+form.web .container main a {
   color: white;
   text-decoration: none;
 }
-form .container main a input {
+form.web .container main a input {
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
@@ -128,7 +135,7 @@ form .container main a input {
   border-radius: 30px;
   font-weight: 700;
 }
-form .container main a input:hover {
+form.web .container main a input:hover {
   background-color: #fcb813;
 }/*# sourceMappingURL=style.css.map */
 
